--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <!-- ANIMAL LIST -->
     <string name="title_list">List of animals</string>
     <string name="title_activity_animal_data">AnimalDataActivity</string>
+    <string name="title_activity_camera2">camera2</string>
 
 
 </resources>
