V3 25/03/2020 camera en funcionament

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">PetjadesApp</string>
     <string name="action_settings">Settings</string>
@@ -13,24 +14,23 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <!-- MENU -->
-    <string name="txtMenuHome">Inicio</string>
+    <string name="txtMenuHome">Inici</string>
     <!-- <string name="txtMenuList">Guía de mamíferos</string> -->
-    <string name="txtMenuCamera">Cámara</string>
+    <string name="txtMenuCamera">Càmera</string>
     <!-- <string name="txtMenuDicotomica">Clave dicotomica</string> -->
 
     <!-- MAIN ACTIVITY -->
-    <string name="txtListMenu">Guía de mamíferos</string>
-    <string name="txtDicotomicaMenu">Clave dicotomica</string>
+    <string name="txtListMenu">Guía de mamífers</string>
+    <string name="txtDicotomicaMenu">Clau dicotómica</string>
 
     <!-- ANIMAL LIST -->
-    <string name="title_list">Guía de mamíferos</string>
+    <string name="title_list">Guía de mamífers</string>
     <string name="title_activity_animal_data">AnimalDataActivity</string>
-    <string name="title_activity_camera2">Càmara</string>
+    <string name="title_activity_camera2">Càmera</string>
 
     <!-- ANIMAL DATA ACTIVITY falta implementar-ho-->
-    <string name="txtIndexDescription">Descripción</string>
-    <string name="txtIndexHabitat">Hábitat</string>
-    <string name="txtIndexDistribution">Distribución</string>
-    <string name="txtIndexTrace">Rastros</string>
-
+    <string name="txtIndexDescription">Descripció</string>
+    <string name="txtIndexHabitat">Hàbitat</string>
+    <string name="txtIndexDistribution">Distribució</string>
+    <string name="txtIndexTrace">Rastres</string>
 </resources>
