--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">PetjadesApp</string>
     <string name="action_settings">Settings</string>
@@ -13,24 +14,23 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <!-- MENU -->
-    <string name="txtMenuHome">Inicio</string>
+    <string name="txtMenuHome">Home</string>
     <!-- <string name="txtMenuList">Guía de mamíferos</string> -->
-    <string name="txtMenuCamera">Cámara</string>
+    <string name="txtMenuCamera">Camera</string>
     <!-- <string name="txtMenuDicotomica">Clave dicotomica</string> -->
 
     <!-- MAIN ACTIVITY -->
-    <string name="txtListMenu">Guía de mamíferos</string>
-    <string name="txtDicotomicaMenu">Clave dicotomica</string>
+    <string name="txtListMenu">Mamal guide</string>
+    <string name="txtDicotomicaMenu">Dichotomous key</string>
 
     <!-- ANIMAL LIST -->
-    <string name="title_list">Guía de mamíferos</string>
+    <string name="title_list">Mamal guide</string>
     <string name="title_activity_animal_data">AnimalDataActivity</string>
-    <string name="title_activity_camera2">Càmara</string>
+    <string name="title_activity_camera2">Camera</string>
 
     <!-- ANIMAL DATA ACTIVITY falta implementar-ho-->
-    <string name="txtIndexDescription">Descripción</string>
-    <string name="txtIndexHabitat">Hábitat</string>
-    <string name="txtIndexDistribution">Distribución</string>
-    <string name="txtIndexTrace">Rastros</string>
-
+    <string name="txtIndexDescription">Description</string>
+    <string name="txtIndexHabitat">Habitat</string>
+    <string name="txtIndexDistribution">Distribution</string>
+    <string name="txtIndexTrace">Traces</string>
 </resources>
