--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_dichotomous_key">DichotomousKeyActivity</string>
 
     <!-- MENU -->
     <string name="txtMenuHome">Inicio</string>
@@ -20,7 +21,7 @@
 
     <!-- MAIN ACTIVITY -->
     <string name="txtListMenu">Guía de mamíferos</string>
-    <string name="txtDicotomicaMenu">Clave dicotomica</string>
+    <string name="txtDichotomousMenu">Clave dicotomica</string>
 
     <!-- ANIMAL LIST -->
     <string name="title_list">Guía de mamíferos</string>
@@ -32,5 +33,6 @@
     <string name="txtIndexHabitat">Hábitat</string>
     <string name="txtIndexDistribution">Distribución</string>
     <string name="txtIndexTrace">Rastros</string>
+
 
 </resources>
