--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="more_than_onefivecm">Más de 1,5 cm</string>
     <string name="mole">Huella con hilera</string>
     <string name="side_fingers">Dedos laterales</string>
+    <string name="digitigrade">Huella digitígrada</string>
 
     <!-- LEFT BUTTON-->
     <string name="fingers">Dedos</string>
@@ -69,7 +70,7 @@
     <string name="five_fingers">5 dedos</string>
     <string name="front_fingers">Dedos hacia delante</string>
     <string name="oval_pad">Almohadilla ovalada</string>
-
+    <string name="plantigrade">Huella plantigrada</string>
 
     <!-- ABOUT -->
     <string name="title_activity_about">About</string>
