--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PetjadesApp</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_animals_list">AnimalsListActivity</string>
+    <string name="title_activity_animals_list">...Mamíferos</string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -11,7 +11,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="title_activity_dichotomous_key">DichotomousKeyActivity</string>
+    <string name="title_activity_dichotomous_key">...Clave dicotómica</string>
 
     <!-- MENU -->
     <string name="txtMenuHome">Inicio</string>
@@ -25,7 +25,7 @@
 
     <!-- ANIMAL LIST -->
     <string name="title_list">Guía de mamíferos</string>
-    <string name="title_activity_animal_data">AnimalDataActivity</string>
+    <string name="title_activity_animal_data"></string>
     <string name="title_activity_camera2">Càmara</string>
 
     <!-- ANIMAL DATA ACTIVITY falta implementar-ho-->
@@ -33,7 +33,6 @@
     <string name="txtIndexHabitat">Hábitat</string>
     <string name="txtIndexDistribution">Distribución</string>
     <string name="txtIndexTrace">Rastros</string>
-    <string name="title_activity_adapter_prova">AdapterProva</string>
 
     <!-- DICHOTOMOUS KEY ACTIVITY-->
     <!-- RIGTH BUTTON-->
