--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PetjadesApp</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_animals_list">...Mamíferos</string>
+    <string name="title_activity_animals_list">Mamíferos</string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -11,7 +11,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="title_activity_dichotomous_key">...Clave dicotómica</string>
+    <string name="title_activity_dichotomous_key">Clave dicotómica</string>
 
     <!-- MENU -->
     <string name="txtMenuHome">Inicio</string>
