--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PetjadesApp</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_animals_list">Mamíferos</string>
+    <string name="title_activity_animals_list"></string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -27,6 +27,7 @@
     <string name="title_list">Guía de mamíferos</string>
     <string name="title_activity_animal_data"></string>
     <string name="title_activity_camera2">Càmara</string>
+    <string name="search">Buscar...</string>
 
     <!-- ANIMAL DATA ACTIVITY falta implementar-ho-->
     <string name="txtIndexDescription">Descripción</string>
