V8 27/04/2020 Sols falta:  - multiidioma  - base dades desde fitxer

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -86,4 +86,6 @@
         <a href="https://creativecommons.org/licenses/by-nc/4.0/">Algunos derechos reservados.</a>
     </string>
 
+    <string name="title_activity_load">loadActivity</string>
+
 </resources>
