V8 27/04/2020 Sols falta:  - multiidioma  - base dades desde fitxer

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,6 +18,7 @@
     <string name="txtMenuHome">Home</string>
     <!-- <string name="txtMenuList">Guía de mamíferos</string> -->
     <string name="txtMenuCamera">Camera</string>
+    <string name="txtMenuAbout">About</string>
     <!-- <string name="txtMenuDicotomica">Clave dicotomica</string> -->
 
     <!-- MAIN ACTIVITY -->
