--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <!-- <string name="txtMenuList">Guía de mamíferos</string> -->
     <string name="txtMenuCamera">Cámara</string>
     <string name="txtMenuAbout">Créditos</string>
+    <string name="txtMenuMaps">Mapas</string>
     <!-- <string name="txtMenuDicotomica">Clave dicotomica</string> -->
 
     <!-- MAIN ACTIVITY -->
@@ -85,5 +86,8 @@
         <a href="https://creativecommons.org/licenses/by-nc/4.0/">Algunos derechos reservados.</a>
     </string>
     <string name="title_activity_load">loadActivity</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps_layout">MapsLayoutActivity</string>
+
 
 </resources>
