Data: 13/05/2020 - dialog fet Sols falta:  - multiidioma strings  - enrere dichotomous  - txt carrusel view  - botó retorn AboutActivity  - MapAcitvity

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -89,6 +89,10 @@
     </string>
 
     <string name="title_activity_load">loadActivity</string>
+    <string name="title_dialog">Guardar coordenada</string>
+    <string name="ok_dialog">Ok</string>
+    <string name="cancel_dialog">Cancel</string>
+    <string name="spinerselection_dialog">Selecciona un animal...</string>
 
 
 </resources>
