--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -88,5 +88,9 @@
     </string>
     <string name="title_activity_load">loadActivity</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_dialog">Guardar coordenada</string>
+    <string name="ok_dialog">Ok</string>
+    <string name="cancel_dialog">Cancel</string>
+    <string name="spinerselection_dialog">Selecciona un animal...</string>
 
 </resources>
