--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,10 @@
     <string name="title_activity_load">loadActivity</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_maps_layout">MapsLayoutActivity</string>
+    <string name="title_dialog">Guardar coordenada</string>
+    <string name="ok_dialog">Ok</string>
+    <string name="cancel_dialog">Cancel</string>
+    <string name="spinerselection_dialog">Selecciona un animal...</string>
 
 
 </resources>
