Data: 13/05/2020 - dialog fet - push a firebase funciona
MapAcitvity:
-localitzacio telf
-coordenades firebase en mapa
-usuaris
-check les meues, check totes.

Sols falta:
 - multiidioma strings
 - enrere dichotomous
 - txt carrusel view
 - botó retorn AboutActivity

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -91,6 +91,7 @@
     <string name="ok_dialog">Ok</string>
     <string name="cancel_dialog">Cancel</string>
     <string name="spinerselection_dialog">Selecciona un animal...</string>
+    <string name="btn_save_coordinate">Save coordinate</string>
 
 
 </resources>
