--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -92,6 +92,7 @@
     <string name="cancel_dialog">Cancel</string>
     <string name="spinerselection_dialog">Selecciona un animal...</string>
     <string name="btn_save_coordinate">Save coordinate</string>
+    <string name="salir_sesion">salir sesión</string>
 
 
 </resources>
