Data: 15/05/2020 MapAcitvity: -coordenades firebase en mapa. -check les meues, check totes.
Sols falta:
 - multiidioma strings
 - enrere dichotomous
 - txt carrusel view
 - botó retorn AboutActivity

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -94,5 +94,6 @@
     <string name="spinerselection_dialog">Selecciona un animal...</string>
     <string name="btn_save_coordinate">Save coordinate</string>
     <string name="salir_sesion">salir sesión</string>
+    <string name="check_boxmis_huellas">Mis huellas</string>
 
 </resources>
