--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -1,99 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">PetjadesApp</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Ajustes</string>
     <string name="title_activity_animals_list"></string>
-
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="title_activity_dichotomous_key">Clave dicotómica</string>
+    <string name="title_activity_dichotomous_key">Clau dicotómica</string>
 
     <!-- MENU -->
-    <string name="txtMenuHome">Inicio</string>
-    <!-- <string name="txtMenuList">Guía de mamíferos</string> -->
-    <string name="txtMenuCamera">Cámara</string>
-    <string name="txtMenuAbout">Créditos</string>
-    <string name="txtMenuMaps">Mapas</string>
-    <!-- <string name="txtMenuDicotomica">Clave dicotomica</string> -->
+    <string name="txtMenuHome">Inici</string>
+    <string name="txtMenuCamera">Càmera</string>
+    <string name="txtMenuAbout">Crèdits</string>
+    <string name="txtMenuMaps">Mapa de petjades</string>
+    <string name="txtListMenu">Guia de mamífers</string>
+    <string name="txtDichotomousMenu">Identificació de petjades</string>
+    <string name="txtMenuBackground">Guia per a la identificació de petjades y rastres de mamífers de Espanya.</string>
 
-    <!-- MAIN ACTIVITY -->
-    <string name="txtListMenu">Guía de mamíferos</string>
-    <string name="txtDichotomousMenu">Clave dicotomica</string>
 
     <!-- ANIMAL LIST -->
-    <string name="title_list">Guía de mamíferos</string>
-    <string name="title_activity_animal_data"></string>
-    <string name="title_activity_camera2">Càmara</string>
-    <string name="search">Buscar...</string>
+    <!--<string name="title_activity_camera2">Cámara</string>-->
+    <string name="search">Cercar…</string>
 
     <!-- ANIMAL DATA ACTIVITY falta implementar-ho-->
-    <string name="txtIndexDescription">Descripción</string>
-    <string name="txtIndexHabitat">Hábitat</string>
-    <string name="txtIndexDistribution">Distribución</string>
-    <string name="txtIndexTrace">Rastros</string>
+    <string name="txtIndexDescription">Descripció</string>
+    <string name="txtIndexHabitat">Hàbitat</string>
+    <string name="txtIndexDistribution">Distribució</string>
+    <string name="txtIndexTrace">Rastres</string>
 
     <!-- DICHOTOMOUS KEY ACTIVITY-->
     <!-- RIGTH BUTTON-->
-    <string name="hoof">Pezuña/Casco</string>
-    <string name="pair_fingers">Dedos par</string>
-    <string name="no_secundary_hoof">Sin pezuña secundaria</string>
-    <string name="with_nails">Con uñas</string>
+    <string name="hoof">Peülla/Casc</string>
+    <string name="pair_fingers">Dits par</string>
+    <string name="no_secundary_hoof">Sense peülla secundaria</string>
+    <string name="with_nails">Amb ungles</string>
     <string name="double_pad">Almohadilla bilobulada</string>
-    <string name="no_main_pad">Sin almohadilla principal</string>
-    <string name="heavily_modified">Muy modificada</string>
+    <string name="no_main_pad">Sense almohadilla principal</string>
+    <string name="heavily_modified">Molt modificada</string>
     <string name="divided_pad">Almohadilla principal dividida</string>
-    <string name="one_to_five_size">entre 1 y 5 cm</string>
-    <string name="more_than_threecm">Más de 3 cm</string>
-    <string name="long_nails">Uñas largas</string>
-    <string name="less_than_threecm">Menos de 3 cm</string>
-    <string name="more_than_onefivecm">Más de 1,5 cm</string>
-    <string name="mole">Huella con hilera</string>
-    <string name="side_fingers">Dedos laterales</string>
-    <string name="digitigrade">Huella digitígrada</string>
+    <string name="one_to_five_size">Entre 1 i 5 cm</string>
+    <string name="more_than_threecm">Més de 3 cm</string>
+    <string name="long_nails">Ungles llargues</string>
+    <string name="less_than_threecm">Menys de 3 cm</string>
+    <string name="more_than_onefivecm">Més de 1,5 cm</string>
+    <string name="mole">Petjada amb filera</string>
+    <string name="side_fingers">Dits laterals</string>
+    <string name="digitigrade">Petjada digitígrada</string>
 
     <!-- LEFT BUTTON-->
-    <string name="fingers">Dedos</string>
-    <string name="no_nails">Sin uñas</string>
+    <string name="fingers">Dits</string>
+    <string name="no_nails">Sense ungles</string>
     <string name="tripe_pad">Almohadilla trilobulada</string>
-    <string name="odd_fingers">Dedos impares</string>
-    <string name="with_secundary_hoof">Con pezuña secundaria</string>
-    <string name="with_main_pad">Con almohadilla principal</string>
-    <string name="unique_main_pad">Almohadilla principal unica</string>
-    <string name="five_to_eigth_cm">Entre 5 y 8 cm</string>
+    <string name="odd_fingers">Dits impars</string>
+    <string name="with_secundary_hoof">Amb peülla secundaria</string>
+    <string name="with_main_pad">Amb almohadilla principal</string>
+    <string name="unique_main_pad">Almohadilla principal única</string>
+    <string name="five_to_eigth_cm">Entre 5 i 8 cm</string>
     <string name="small_nails">Uñas pequeñas</string>
-    <string name="one_to_three_cm">Entre 1 y 3 cm</string>
-    <string name="four_to_five_cm">Entre 4 y 5 cm</string>
-    <string name="less_than_onefive_cm">Menos de 1,5cm</string>
-    <string name="five_fingers">5 dedos</string>
-    <string name="front_fingers">Dedos hacia delante</string>
+    <string name="one_to_three_cm">Entre 1 i 3 cm</string>
+    <string name="four_to_five_cm">Entre 4 i 5 cm</string>
+    <string name="less_than_onefive_cm">Menys de 1,5cm</string>
+    <string name="five_fingers">Cinc dits</string>
+    <string name="front_fingers">Dics cap a davant</string>
     <string name="oval_pad">Almohadilla ovalada</string>
-    <string name="plantigrade">Huella plantigrada</string>
+    <string name="plantigrade">Petjada plantigrada</string>
 
-    <!-- ABOUT -->
-    <string name="title_activity_about">About</string>
-    <string name="direction_title">Desarrollo, edición de contenidos y edición gráfica.</string>
-    <string name="photos_title">Fotografías.</string>
-    <string name="maps_title">Mapas de distribución.</string>
+    <!-- ABOUT ACTIVITY -->
+    <string name="title_activity_about">Crèdits</string>
+    <string name="direction_title">Desenvolupaments, edició de contingut i gràfics</string>
+    <string name="photos_title">Fotografies</string>
+    <string name="maps_title">Mapes de distribució</string>
     <string name="maps_text">
         <a href="https://www.miteco.gob.es/es/biodiversidad/temas/inventarios-nacionales/">Ministerio para la Trancisión Ecológica y el Reto Demográfico.</a>
     </string>
     <string name="copyrigth_text">
         <a href="https://creativecommons.org/licenses/by-nc/4.0/">Algunos derechos reservados.</a>
     </string>
-    <string name="title_activity_load">loadActivity</string>
-    <string name="title_activity_maps">Map</string>
-    <string name="title_dialog">Guardar coordenada</string>
-    <string name="ok_dialog">Ok</string>
-    <string name="cancel_dialog">Cancel</string>
-    <string name="spinerselection_dialog">Selecciona un animal...</string>
-    <string name="btn_save_coordinate">Save coordinate</string>
-    <string name="salir_sesion">salir sesión</string>
-    <string name="check_boxmis_huellas">Mis huellas</string>
+
+    <!-- MAPS ACTIVITY -->
+    <string name="title_dialog">Desar petjada</string>
+    <string name="ok_dialog">Acceptar</string>
+    <string name="cancel_dialog">Cancelar</string>
+    <string name="spinerselection_dialog">Selecciona un animal…</string>
+    <string name="btn_save_coordinate">Desar petjada</string>
+    <string name="salir_sesion">Sortir de la sessió</string>
+    <string name="check_boxmis_huellas">Les meves petjades</string>
+    <string name="title_activity_maps_layout" />
+    <string name="title_activity_camera2" />
+    <string name="title_activity_animal_data" />
 
 </resources>
