--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,35 +1,22 @@
 <resources>
     <string name="app_name">PetjadesApp</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Ajustes</string>
     <string name="title_activity_animals_list"></string>
-
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_dichotomous_key">Clave dicotómica</string>
 
     <!-- MENU -->
     <string name="txtMenuHome">Inicio</string>
-    <!-- <string name="txtMenuList">Guía de mamíferos</string> -->
     <string name="txtMenuCamera">Cámara</string>
     <string name="txtMenuAbout">Créditos</string>
-    <string name="txtMenuMaps">Mapas</string>
-    <!-- <string name="txtMenuDicotomica">Clave dicotomica</string> -->
-
-    <!-- MAIN ACTIVITY -->
+    <string name="txtMenuMaps">Mapa de huellas</string>
     <string name="txtListMenu">Guía de mamíferos</string>
-    <string name="txtDichotomousMenu">Clave dicotomica</string>
+    <string name="txtDichotomousMenu">Identificación de huellas</string>
+    <string name="txtMenuBackground">Guía para la identificación de huellas y rastros de mamíferos de España.</string>
+
 
     <!-- ANIMAL LIST -->
-    <string name="title_list">Guía de mamíferos</string>
-    <string name="title_activity_animal_data"></string>
-    <string name="title_activity_camera2">Càmara</string>
-    <string name="search">Buscar...</string>
+    <!--<string name="title_activity_camera2">Cámara</string>-->
+    <string name="search">Buscar…</string>
 
     <!-- ANIMAL DATA ACTIVITY falta implementar-ho-->
     <string name="txtIndexDescription">Descripción</string>
@@ -74,27 +61,28 @@
     <string name="oval_pad">Almohadilla ovalada</string>
     <string name="plantigrade">Huella plantigrada</string>
 
-    <!-- ABOUT -->
-    <string name="title_activity_about">About</string>
-    <string name="direction_title">Desarrollo, edición de contenidos y edición gráfica.</string>
-    <string name="photos_title">Fotografías.</string>
-    <string name="maps_title">Mapas de distribución.</string>
+    <!-- ABOUT ACTIVITY -->
+    <string name="title_activity_about">Créditos</string>
+    <string name="direction_title">Desarrollo, edición de contenidos y edición gráfica</string>
+    <string name="photos_title">Fotografías</string>
+    <string name="maps_title">Mapas de distribución</string>
     <string name="maps_text">
         <a href="https://www.miteco.gob.es/es/biodiversidad/temas/inventarios-nacionales/">Ministerio para la Trancisión Ecológica y el Reto Demográfico.</a>
     </string>
     <string name="copyrigth_text">
         <a href="https://creativecommons.org/licenses/by-nc/4.0/">Algunos derechos reservados.</a>
     </string>
-    <string name="title_activity_load">loadActivity</string>
-    <string name="title_activity_maps">Map</string>
-    <string name="title_activity_maps_layout">MapsLayoutActivity</string>
-    <string name="title_dialog">Guardar coordenada</string>
-    <string name="ok_dialog">Ok</string>
-    <string name="cancel_dialog">Cancel</string>
-    <string name="spinerselection_dialog">Selecciona un animal...</string>
-    <string name="btn_save_coordinate">Save coordinate</string>
-    <string name="salir_sesion">salir sesión</string>
-    <string name="check_boxmis_huellas">Mis huellas</string>
 
+    <!-- MAPS ACTIVITY -->
+    <string name="title_dialog">Guardar huella</string>
+    <string name="ok_dialog">Aceptar</string>
+    <string name="cancel_dialog">Cancelar</string>
+    <string name="spinerselection_dialog">Selecciona un animal…</string>
+    <string name="btn_save_coordinate">Guardar huella</string>
+    <string name="salir_sesion">Salir sesión</string>
+    <string name="check_boxmis_huellas">Mis huellas</string>
+    <string name="title_activity_maps_layout" />
+    <string name="title_activity_camera2" />
+    <string name="title_activity_animal_data" />
 
 </resources>
