--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -71,7 +71,7 @@
         <a href="https://www.miteco.gob.es/es/biodiversidad/temas/inventarios-nacionales/">Ministerio para la Trancisión Ecológica y el Reto Demográfico.</a>
     </string>
     <string name="copyrigth_text">
-        <a href="https://creativecommons.org/licenses/by-nc/4.0/">Algunos derechos reservados.</a>
+        <a href="https://creativecommons.org/licenses/by-nc/4.0/">Some rigths reserved.</a>
     </string>
 
     <!-- MAPS ACTIVITY -->
