--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,10 @@
     <string name="title_activity_maps_layout" />
     <string name="title_activity_camera2" />
     <string name="title_activity_animal_data" />
+
+    <!-- ERRORS -->
+    <string name="error_bd">ERROR. No se ha podido cargar la base de datos.</string>
+    <string name="camera_perm">Atención!!! Para utilizar la camara se necesita aceptar los permisos.</string>
+    <string name="confi_change">Cambio de configuración.</string>
+    <string name="save_picture">Guardado:</string>
 </resources>
