--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -92,7 +92,8 @@
 
     <!-- ERRORS -->
     <string name="error_bd">ERROR. No se ha podido cargar la base de datos.</string>
-    <string name="camera_perm">Atención!!! Para utilizar la camara se necesita aceptar los permisos.</string>
+    <string name="camera_perm">Atención!!! Se necesita aceptar los permisos.</string>
     <string name="confi_change">Cambio de configuración.</string>
     <string name="save_picture">Guardado:</string>
+    <string name="error_connection">Error en la connexión.</string>
 </resources>
