--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">PetjadesApp</string>
+    <string name="app_name">Mammals of Spain</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_animals_list"></string>
 
@@ -96,4 +96,6 @@
     <string name="confi_change">Configuration change.</string>
     <string name="save_picture">Saved:</string>
     <string name="error_connection">Connection error.</string>
+
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
