--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,18 +72,9 @@
     <string name="copyrigth_text">
         <a href="https://creativecommons.org/licenses/by/4.0/">Derechos reservados.</a>
     </string>
+    <string name="versionNumber">v1.0.0</string>
+    <string name="version">Versión</string>
 
-    <!-- MAPS ACTIVITY -->
-    <string name="title_dialog">Guardar huella</string>
-    <string name="ok_dialog">Aceptar</string>
-    <string name="cancel_dialog">Cancelar</string>
-    <string name="spinerselection_dialog">Selecciona un animal…</string>
-    <string name="btn_save_coordinate">Guardar huella</string>
-    <string name="salir_sesion">Salir sesión</string>
-    <string name="check_boxmis_huellas">Mis huellas</string>
-    <string name="set_visible">Desea que su marca sea visible para otros usuarios?</string>
-    <string name="esta_seguro">¿Esta seguro?</string>
-    <string name="yes">Sí</string>
 
     <string name="title_activity_maps_layout" />
     <string name="title_activity_camera2" />
@@ -97,4 +88,5 @@
     <string name="error_connection">Error en la connexión.</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+
 </resources>
