versió AMB anuncis 1.0.0 --> 27/10/2020

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -89,6 +89,6 @@
     <string name="error_connection">Connection error.</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-2593792704839147/7738931246</string>
-    <string name="app_id">ca-app-pub-2593792704839147/7738931246</string>
+    <string name="app_id">ca-app-pub-2593792704839147~4175106667</string>
 
 </resources>
